@@ -1265,7 +1265,7 @@ function boost_rrdtool_function_update($local_data_id, $rrd_path, $rrd_update_te
 		$valid_entry = boost_rrdtool_function_create($local_data_id, $initial_time, false, $rrdtool_pipe);
 	}
 
-	if (get_rrdtool_version() >= 1.5) {
+	if (cacti_version_compare(get_rrdtool_version(),'1.5','>=')) {
 		$update_options='--skip-past-updates';
 	} else {
 		$update_options='';
