@@ -5306,7 +5306,14 @@ function get_nonsystem_data_input($data_input_id) {
 }
 
 function get_rrdtool_version() {
-	return str_replace('rrd-', '', str_replace('.x', '', read_config_option('rrdtool_version')));
+	return str_replace('rrd-', '', str_replace('.x', '.0', read_config_option('rrdtool_version')));
+}
+
+function get_installed_rrdtool_version() {
+	$shell = shell_exec(cacti_escapeshellcmd(read_config_option('path_rrdtool') . ' -v 2>&1'));
+	if (preg_match('/^RRDtool ([0-9.]+)$/', $shell, $matches)) {
+		return $matches[1];
+	}
 }
 
 function get_md5_hash($path) {
